# event-pipeline

./: Cargo.toml
apps/query-service/: Cargo.toml
apps/query-service/src/: main.rs
crates/control-plane-app/src/: lib.rs
crates/postgres-store/: Cargo.toml
crates/postgres-store/src/: lib.rs
crates/processor-app/src/: lib.rs
crates/query-app/: Cargo.toml
crates/query-app/src/: lib.rs
crates/types/src/: contracts.rs  lib.rs
proto/eventpipeline/v1/: event_pipeline.proto
